# BrainSpark

./: .env.example  .gitignore  .npmrc  AGENTS.md  Makefile  PROJECT-NOTES.md  README.md  docker-compose.yml  package.json  pnpm-workspace.yaml  start-dev.bat  turbo.json
apps/ai-service/: main.py  (+1 more)
apps/backend-python/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
apps/backend-python/alembic/: env.py  script.py.mako
apps/backend-python/app/core/: config.py  database.py  exceptions.py  logging.py  response.py
apps/backend-python/app/middleware/: cors.py  error_handler.py  request_id.py
apps/backend-python/app/models/: __init__.py  assessment.py  class_.py  student.py  user.py
apps/backend-python/app/routers/: __init__.py  assessments.py  auth.py  classes.py  students.py  users.py
apps/backend-python/app/schemas/: __init__.py  assessment.py  class_.py  student.py  user.py
apps/backend-python/app/services/: __init__.py  assessment_service.py  auth_service.py  class_service.py  student_service.py  user_service.py
apps/backend-python/tests/: test_health.py
docker/: healthcheck.sh
docs/: README.md  ai-service-design.md  api-design.md  architecture.md  business-backend-design.md  gateway-design.md  infrastructure-design.md  middleware-design.md  plan.md  repo-structure.md  scheme.md
plans/: brainspark-development-plan.md  database-design-overview.md  database-local-setup.md  frontend-development-plan.md  java-to-python-migration-assessment.md  user-auth-system-design.md
scripts/: deploy-local.ps1
(+189 files in other folders)
